--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -31,7 +31,7 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "launchUrl": "http://localhost:5230",
       "publishAllPorts": true,
       "useSSL": true
     }
